--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
     <div id ="developpement">
         <p>Vous êtes en environnement de développement.</p>
     </div>
-    <button id="Affichage1">Affichage standard</button>
+    <button onclick="show_Standart()">Affichage standard</button>
 </br>
     <button onclick="show_Hide_Production()">Affichage production</button>
 </br>
